Connect and disconnect with dongle